# liiga_teletext

./: .cursorrules  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DISAMBIGUATION_DISPLAY_VERIFICATION.md  DYNAMIC_UI_TESTING_GUIDE.md  FILE_IO_GUIDELINES.md  IMPROVEMENTS.md  NEXT_ACTIONS.md  OBSOLETE_FILES_ANALYSIS.md  PERFORMANCE_IMPROVEMENTS.md  PR_DESCRIPTION.md  README.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  REFACTORING_README.md  REFACTORING_SUMMARY.md  REFACTORING_TASKS.md  ROSTER_DISAMBIGUATION.md  TELETEXT_COLORS.md  TODO_INCONSISTENCIES.md  WIDE_MODE_TASKS.md  build.rs  example.config.toml  verify_refactoring.sh
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: publish.yml  test.yml
.kiro/hooks/: task-completion-quality-check.json
.kiro/specs/auto-refresh-fix/: design.md  requirements.md  tasks.md
.kiro/specs/compact-mode/: design.md  requirements.md  tasks.md
.kiro/specs/dynamic-ui-space/: design.md  requirements.md  tasks.md
.kiro/specs/player-name-disambiguation/: design.md  requirements.md  tasks.md
.kiro/specs/ui-refactoring/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/superpowers/plans/: 2026-03-20-codebase-simplification.md  2026-03-22-contextual-keybindings-and-cache-reset.md
src/: app.rs  cli.rs  commands.rs  config.rs  constants.rs  data_fetcher.rs  error.rs  lib.rs  logging.rs  main.rs  performance.rs  teletext_ui.rs  testing_utils.rs  version.rs
src/config/: mod.rs  paths.rs  user_prompts.rs  validation.rs
src/data_fetcher/: api.rs  cache.rs  game_utils.rs  mod.rs  models.rs  models.rs.backup  player_names.rs  processors.rs
src/data_fetcher/api/: api_tests.rs  (+14 more)
src/schemas/: game_schedule_schema.json  game_schema.json
src/teletext_ui/: bracket_display.rs  compact_mode_rendering.rs  content.rs  core.rs  footer.rs  formatting.rs  game_display.rs  indicators.rs  layout.rs  mod.rs  mode_utils.rs  pagination.rs  rendering.rs  score_formatting.rs  season_utils.rs  standings_display.rs  utils.rs  validation.rs  wide_mode.rs
src/ui/: content_adapter.rs  interactive.rs  layout.rs  mod.rs  resize.rs
tests/: backward_compatibility_test.rs  comprehensive_end_to_end_tests.rs  disambiguation_display_tests.rs  disambiguation_integration_tests.rs  dynamic_ui_integration_tests.rs  dynamic_ui_performance_tests.rs  game_display_integration_tests.rs  integration_tests.rs  interactive_layout_integration_tests.rs  layout_performance_test.rs  no_games_message_test.rs  no_redundant_disambiguation_test.rs  same_lastname_different_players_test.rs  simple_disambiguation_test.rs  simple_dynamic_ui_test.rs  simple_performance_test.rs
(+54 files in other folders)
