[package]
name = "liiga_teletext"
version = "0.1.0"
edition = "2024"
authors = ["Niko Salonen <nikotsalonen@gmail.com>"]
description = "A terminal application that displays Finnish Liiga hockey results in a teletext style"

[dependencies]
chrono = "0.4.40"
crossterm = "0.29.0"
dirs = "6.0.0"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
