[package]
name = "liiga_teletext"
version = "0.2.0"
edition = "2024"
authors = ["Niko Salonen <nikotsalonen@gmail.com>"]
description = "A terminal application that displays Finnish Liiga hockey results in a teletext style"
license = "MIT"
repository = "https://github.com/nikosalonen/liiga_teletext"
homepage = "https://github.com/nikosalonen/liiga_teletext"
documentation = "https://github.com/nikosalonen/liiga_teletext#readme"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
chrono = "0.4.40"
crossterm = "0.29.0"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "6.0.0"
futures = "0.3"
lazy_static = "1.5.0"
clap = { version = "4.5.35", features = ["derive"] }
