[package]
name = "liiga_teletext"
version = "0.15.0"
edition = "2024"
authors = ["Niko Salonen <nikotsalonen@gmail.com>"]
description = "YLE Teksti-TV 221 in your terminal - Finnish Liiga hockey results with authentic teletext aesthetics"
license = "MIT"
repository = "https://github.com/nikosalonen/liiga_teletext"
homepage = "https://github.com/nikosalonen/liiga_teletext"
documentation = "https://github.com/nikosalonen/liiga_teletext#readme"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[[bin]]
name = "liiga_teletext"
path = "src/main.rs"

[lib]
name = "liiga_teletext"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.40"
crossterm = "0.29.0"
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.2"
dirs = "6.0.0"
futures = "0.3"
lazy_static = "1.5.0"
clap = { version = "4.5.41", features = ["derive"] }
semver = "1.0.22"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
lru = "0.16.0"

[dev-dependencies]
tempfile = "3.10"
wiremock = "0.6"
tokio-test = "0.4"
serial_test = "3.2.0"
unicode-width = "0.2.1"
